--- a/advancetozero.html
+++ b/advancetozero.html
@@ -23,7 +23,7 @@
 </head>
 <body>
 <!--This is the START of the menu-->
-      <div id="menu-wrapper">
+    <div id="menu-wrapper">
         <div id="main-menu">
             <ul class="collapsible" data-collapsible="accordion">
                 <li>
@@ -36,41 +36,24 @@
                 </li>
                 <li>
                     <div class="collapsible-menu-header">
-                        <a href="zeroproject.html">
-                            <span class="title">Zero Project</span>
+                        <a href="Strategy1.html">
+                            <span class="title">Strategy</span>
                         </a>
                     </div>
                 </li>
                 <br>
                 <li>
                     <div class="collapsible-menu-header">
-                        <a href="trendsinhomelessness.html">
-                            <span class="title">Trends in homelessness in WA</span>
-                        </a>
-                    </div>
-                    <div class="collapsible-menu-body">
-                        <a href="trendsinhomelessness.html#Ending-chronic-homelessness">
-                            <span class="title">Ending chronic homelessness in WA</span>
-                        </a>
-                        <br><br>
-                        <a href="trendsinhomelessness.html#Reducing-the-rate-of-homelessness">
-                            <span class="title">Reducing the rate of homelessness in WA</span>
-                        </a>
-                        <br><br>
-                        <a href="trendsinhomelessness.html#Reducing-Aboriginal-homelessness">
-                            <span class="title">Reducing Aboriginal homelessness</span>
-                        </a>
-                        <br><br>
-                        <a href="trendsinhomelessness.html#Addressing-the-needs">
-                            <span class="title">Addressing the needs of those experiencing homelessness</span>
+                        <a href="advancetozero.html">
+                            <span class="title">WA Advance to Zero Campaign</span>
                         </a>
                     </div>
                     <br>
                 </li>
                 <li>
                     <div class="collapsible-menu-header">
-                        <a href="preventinghomelessness.html">
-                            <span class="title">Preventing homelessness in WA</span>
+                        <a href="zeroproject.html">
+                            <span class="title">Zero Dashboard</span>
                         </a>
                     </div>
                     <div class="collapsible-menu-body">
@@ -83,7 +66,7 @@
                 <li>
                     <div class="collapsible-menu-header">
                         <a href="funding.html">
-                            <span class="title">Funding of homelessness services</span>
+                            <span class="title">Events & Training</span>
                         </a>
                     </div>
                 </li>
@@ -91,7 +74,7 @@
                 <li>
                      <div class="collapsible-menu-header">
                         <a href="livedexperience.html">
-                            <span class="title">The lived experience voice</span>
+                            <span class="title">Advocacy</span>
                         </a>
                     </div>
                 </li>
@@ -99,7 +82,7 @@
                 <li>
                     <div class="collapsible-menu-header">
                         <a href="policyandprogram.html">
-                            <span class="title">West Australian policy, program and services environment</span>
+                            <span class="title">TBD 1</span>
                         </a>
                     </div>
                     <div class="collapsible-menu-body">
@@ -116,7 +99,7 @@
                 <li>
                      <div class="collapsible-menu-header">
                         <a href="advancetozero.html">
-                            <span class="title">Advance to Zero</span>
+                            <span class="title">TBD 2</span>
                         </a>
                     </div>
                 </li>
