--- a/funding2statefunding.html
+++ b/funding2statefunding.html
@@ -121,7 +121,7 @@
     <table class="header-table" style="border:1">
         <tr>
             <td style="width:70%; vertical-align:top;">
-                <h1>Zero Project</h1>
+                <h1>Western Australian Alliance to End Homelessness Dashboard</h1>
                 <br>
             </td>
             <td style="width:30%; vertical-align:top;">
@@ -129,12 +129,18 @@
             </td>
         </tr>
     </table>
-    <!-- comment -->
     <div class="spacer"></div>
     <div class="clr"></div>
-	<iframe title="Zero Project Final NL" width="1024" height="612" src="https://app.powerbi.com/view?r=eyJrIjoiNzYzNWYxZmYtM2NjMC00NzNjLThkNjQtNGRhMmE1NDdjNzE1IiwidCI6IjdhOTU0NzU2LTkxN2UtNGU5OS1iNDBmLWRlMjEyY2JmMTM0YSJ9" frameborder="0" allowFullScreen="true"></iframe>
-    </div>
-
+	<h2>State and Territory Government Expenditure</h2><br>
+	
+	<p>
+		An index series was created to determine real expenditure on social housing and homeless services between States and Territories. The baseline used for this index was 2017/18 (100%), with an increase of the index greater than 100% representing a growth in expenditure. Compared to 2017/18, real expenditure on social housing has increased by 5.9% for Western Australia compared to a 21.1% increase nationally. The national increase in real expenditure on social housing is heavily affected by a very large increase in spending in Victoria. Compared to 2017/18, real expenditure on homelessness services has increased by 22.3% for Western Australia compared to a 37.3% increase nationally. The national increase in real expenditure on homelessness services is once again heavily affected by a very large increase in spending in Victoria. Australian Government NHHA allocations to Western Australia has remained stable from $171.9 million in 2018/19 to $178.5 million in 2021/22.
+	</p><br>
+<div class='tableauPlaceholder' id='viz1695263841034' style='position: relative'><noscript><a href='#'><img alt='Dashboard 1 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Fi&#47;Fig5_4_2&#47;Dashboard1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Fig5_4_2&#47;Dashboard1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Fi&#47;Fig5_4_2&#47;Dashboard1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-GB' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1695263841034');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='800px';vizElement.style.height='527px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='800px';vizElement.style.height='527px';} else { vizElement.style.width='100%';vizElement.style.height='727px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+<br>
+<div class='tableauPlaceholder' id='viz1695264375691' style='position: relative'><noscript><a href='#'><img alt='Dashboard 1 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Fi&#47;Fig5_5_2&#47;Dashboard1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Fig5_5_2&#47;Dashboard1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Fi&#47;Fig5_5_2&#47;Dashboard1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-GB' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1695264375691');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='800px';vizElement.style.height='527px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='800px';vizElement.style.height='527px';} else { vizElement.style.width='100%';vizElement.style.height='727px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+   <br><br>
+    
         <img src="csi-uwa logo.png" width="310" height="90" align="right">
 
 
