--- a/preventing2povertyandunemployment.html
+++ b/preventing2povertyandunemployment.html
@@ -121,7 +121,7 @@
     <table class="header-table" style="border:1">
         <tr>
             <td style="width:70%; vertical-align:top;">
-                <h1>Zero Project</h1>
+                <h1>Western Australian Alliance to End Homelessness Dashboard</h1>
                 <br>
             </td>
             <td style="width:30%; vertical-align:top;">
@@ -129,10 +129,69 @@
             </td>
         </tr>
     </table>
-    <!-- comment -->
     <div class="spacer"></div>
     <div class="clr"></div>
-	<iframe title="Zero Project Final NL" width="1024" height="612" src="https://app.powerbi.com/view?r=eyJrIjoiNzYzNWYxZmYtM2NjMC00NzNjLThkNjQtNGRhMmE1NDdjNzE1IiwidCI6IjdhOTU0NzU2LTkxN2UtNGU5OS1iNDBmLWRlMjEyY2JmMTM0YSJ9" frameborder="0" allowFullScreen="true"></iframe>
+
+    <div id="Addressing-underlying-drivers">
+        <h2>Addressing underlying drivers of homelessness in WA</h2>
+        <blockquote class="blockquote">
+            <h3>Target 4</h3>
+            <h4><i>The underlying causes that result in people becoming homeless have been met head-on, resulting in a reduction by more than half in the inflow of people and families into homelessness in any one year</i></h4>
+        </blockquote>
+        <p>The causes of homelessness are complex, encompassing a broad range of individual and structural determinants, including housing availability and affordability, economic and employment opportunities (or lack thereof), physical and mental health outcomes, domestic and family violence, and social and community connections.</p>
+        <br><br>
+        <h3>Poverty and unemployment</h3>
+        <br>
+        <p3><b>Table 4.3</b>. Poverty statistics and trends</p3>
+        <button type="button" class="collapsible">Poverty</button>
+        <div class="tab-content">
+            <table class="normal-table">
+                <thead>
+                <tr>
+                    <th><p>Indicators</p></th>
+                    <th><p>Most current values</p></th>
+                    <th><p>Trend over time</p></th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td rowspan="2"><p>Western Australian poverty rates (2017 - 2018)<sup>1</sup></p></td>
+                    <td><p>50% median income – 12.9%</p></td>
+                    <td><p>Stable</p></td>
+                </tr>
+                <tr>
+                    <td><p>60% median income – 18.5%</p></td>
+                    <td><p>Stable</p></td>
+                </tr>
+                <tr>
+                    <td rowspan="2"><p>Unemployment rate (2022)<sup>2</sup></td>
+                    <td><p>Youth – 6.3%</p></td>
+                    <td><p>Increasing</p></td>
+                </tr>
+                <tr>
+                    <td><p>General population – 3.0%</p></td>
+                    <td><p>Increasing</p></td>
+                </tr>
+                </tbody>
+                <tfoot>
+                <tr>
+                    <td colspan="3">
+                        <p2>
+                            <sup>1</sup>Australian Council of Social Services and UNSW Rate of poverty by state/territory of residence.<br>
+                            <sup>2</sup>ABS 6020.0 – Labour Force, Australia.
+                        </p2>
+                    </td>
+                </tr>
+                </tfoot>
+            </table>
+        </div>
+        <br>
+        <p>
+            <br><br>
+            Trends in youth unemployment rate and the general population show unemployment on the decline in Western Australia <b>(Figure 4.11)</b>.
+        </p>
+        <div class='tableauPlaceholder' id='viz1695777809968' style='position: relative'><noscript><a href='#'><img alt='Poverty and unemployment ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Fi&#47;Fig4_11&#47;Povertyandunemployment&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Fig4_11&#47;Povertyandunemployment' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Fi&#47;Fig4_11&#47;Povertyandunemployment&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-GB' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1695777809968');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='800px';vizElement.style.height='627px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='800px';vizElement.style.height='627px';} else { vizElement.style.width='100%';vizElement.style.height='727px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+        <br><br>
     </div>
 
         <img src="csi-uwa logo.png" width="310" height="90" align="right">
