--- a/trends4regionalhomelessness.html
+++ b/trends4regionalhomelessness.html
@@ -44,16 +44,33 @@
                 <br>
                 <li>
                     <div class="collapsible-menu-header">
-                        <a href="advancetozero.html">
+                        <a href="trendsinhomelessness.html">
                             <span class="title">WA Advance to Zero Campaign</span>
+                        </a>
+                    </div>
+                    <div class="collapsible-menu-body">
+                        <a href="trendsinhomelessness.html#Ending-chronic-homelessness">
+                            <span class="title">Ending chronic homelessness in WA</span>
+                        </a>
+                        <br><br>
+                        <a href="trendsinhomelessness.html#Reducing-the-rate-of-homelessness">
+                            <span class="title">Reducing the rate of homelessness in WA</span>
+                        </a>
+                        <br><br>
+                        <a href="trendsinhomelessness.html#Reducing-Aboriginal-homelessness">
+                            <span class="title">Reducing Aboriginal homelessness</span>
+                        </a>
+                        <br><br>
+                        <a href="trendsinhomelessness.html#Addressing-the-needs">
+                            <span class="title">Addressing the needs of those experiencing homelessness</span>
                         </a>
                     </div>
                     <br>
                 </li>
                 <li>
                     <div class="collapsible-menu-header">
-                        <a href="zeroproject.html">
-                            <span class="title">Zero Dashboard</span>
+                        <a href="preventinghomelessness.html">
+                            <span class="title">Strategic Initiatives</span>
                         </a>
                     </div>
                     <div class="collapsible-menu-body">
@@ -118,25 +135,36 @@
 <!--This is the START of the content-->
 </div>
 <div id="content">
-    <table class="header-table" style="border:1">
+      <table class="header-table" style="border:1">
         <tr>
             <td style="width:70%; vertical-align:top;">
-                <h1>Zero Project</h1>
+                <h1>Western Australian Alliance to End Homelessness Dashboard</h1>
                 <br>
             </td>
             <td style="width:30%; vertical-align:top;">
-                <img class="logo" src="waeeh logo with text.png" width="300" height="150">
+                <img src="waeeh logo with text.png" width="300" height="150">
             </td>
         </tr>
     </table>
-    <!-- comment -->
     <div class="spacer"></div>
     <div class="clr"></div>
-	<iframe title="Zero Project Final NL" width="1024" height="612" src="https://app.powerbi.com/view?r=eyJrIjoiNzYzNWYxZmYtM2NjMC00NzNjLThkNjQtNGRhMmE1NDdjNzE1IiwidCI6IjdhOTU0NzU2LTkxN2UtNGU5OS1iNDBmLWRlMjEyY2JmMTM0YSJ9" frameborder="0" allowFullScreen="true"></iframe>
+         <h3>Reducing regional homelessness</h3>
+         <br>
+         <p>
+             The proportion of SHS clients that live in regional Western Australia has slightly decreased in 2021/22 (51.0%) compared to 2020/21 (53.2%). The 2028 target for <b>Figure 5.6</b> is to eliminate this over-representation, such that the rate of regional homelessness is the same as the rate of people living in regional WA (20.6%).
+             <br>
+			 In the 2021 Census nine out of ten of the highest homelessness rate Local Government Areas (LGA) were in non-metropolitan Perth, while 8 out of 10 of the highest rough sleeping rate LGAs were in non-metropolitan Perth.
+			 <br><br>
+			 <img src="WA Homeless Rate.jpg" width="1000" height="600" align="left">
+			 <br><br><br>
+			 <img src="WA Rough sleeping.jpg" width="1000" height="600" align="left">
+			 <br><br>
+         </p>
+         <div class='tableauPlaceholder' id='viz1695260025352' style='position: relative'><noscript><a href='#'><img alt='Dashboard 2 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Fi&#47;Fig5_6&#47;Dashboard2&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Fig5_6&#47;Dashboard2' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Fi&#47;Fig5_6&#47;Dashboard2&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-GB' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1695260025352');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='800px';vizElement.style.height='527px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='800px';vizElement.style.height='527px';} else { vizElement.style.width='100%';vizElement.style.height='727px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+         <br><br><br>
     </div>
 
-        <img src="csi-uwa logo.png" width="310" height="90" align="right">
-
+    <img src="csi-uwa logo.png" width="310" height="90" align="right">
 
 </div>
 
