--- a/trends5addressingneeds.html
+++ b/trends5addressingneeds.html
@@ -118,25 +118,36 @@
 <!--This is the START of the content-->
 </div>
 <div id="content">
-    <table class="header-table" style="border:1">
+      <table class="header-table" style="border:1">
         <tr>
             <td style="width:70%; vertical-align:top;">
-                <h1>Zero Project</h1>
+                <h1>Western Australian Alliance to End Homelessness Dashboard</h1>
                 <br>
             </td>
             <td style="width:30%; vertical-align:top;">
-                <img class="logo" src="waeeh logo with text.png" width="300" height="150">
+                <img src="waeeh logo with text.png" width="300" height="150">
             </td>
         </tr>
     </table>
-    <!-- comment -->
     <div class="spacer"></div>
     <div class="clr"></div>
-	<iframe title="Zero Project Final NL" width="1024" height="612" src="https://app.powerbi.com/view?r=eyJrIjoiNzYzNWYxZmYtM2NjMC00NzNjLThkNjQtNGRhMmE1NDdjNzE1IiwidCI6IjdhOTU0NzU2LTkxN2UtNGU5OS1iNDBmLWRlMjEyY2JmMTM0YSJ9" frameborder="0" allowFullScreen="true"></iframe>
+    <div id="Addressing-the-needs">
+        <h2>Addressing the needs of those experiencing homelessness</h2>
+        <blockquote class="blockquote">
+            <h3>Target 6</h3>
+            <h4><i>Those experiencing homelessness and those exiting homelessness with physical health, mental health, and alcohol and other drug use dependence needs will have their needs addressed. This will result in a halving of mortality rates among those who have experienced homelessness and a halving in public hospital costs one year on for those exiting homelessness</i></h4>
+        </blockquote>
+
+        <p>
+            <b>Figure 6.1</b> demonstrates that there has been a large decline in the 2020/21 period – which saw only 40.1% of all individuals accessing Specialist Homelessness Services ending their support periods with their immediate needs and goals met. This is below projected targets, indicating a need for greater and sustained focus on understanding and addressing the complex needs of Specialist Homelessness Services clients.
+            <br>
+        </p>
+        <div class='tableauPlaceholder' id='viz1695777392291' style='position: relative'><noscript><a href='#'><img alt='SHS clients leaving support periods with needs met ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Fi&#47;Fig6_1_16957773401040&#47;SHSclientsleavingsupportperiodswithneedsmet&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Fig6_1_16957773401040&#47;SHSclientsleavingsupportperiodswithneedsmet' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Fi&#47;Fig6_1_16957773401040&#47;SHSclientsleavingsupportperiodswithneedsmet&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-GB' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1695777392291');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='800px';vizElement.style.height='527px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='800px';vizElement.style.height='527px';} else { vizElement.style.width='100%';vizElement.style.height='727px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+        <br><br>
     </div>
 
-        <img src="csi-uwa logo.png" width="310" height="90" align="right">
 
+    <img src="csi-uwa logo.png" width="310" height="90" align="right">
 
 </div>
 
