add aggregate image

--- a/index.html
+++ b/index.html
@@ -132,7 +132,10 @@
     <p>The WAAEH acknowledges the assistance of Western Australian homelessness agencies in preparing the Dashboard. The WAAEH wishes to acknowledge the funding to the WAEEH provided by the Sisters of St John of God Ministries without which the WAAEH Dashboard would not have been possible.
     </p><br><br>
 	<p>For detailed breakdowns, sources, and more accurate graphs please click on each graphic.
-	</p><br>
+	</p> <br>
+	
+	<img class="logo" src="images/aggregate-dashboard.png">
+	
 		<br><br>
 		<div id="demobox">A key target of the WAAEH is to halve the overall rate of homelessness by 2028 from its original 2018 level. Homelessness in Western Australia remains persistently high regardless of the source of data used - the Specialist Homelessness Services (SHS) collection, the Census data, and the Zero Project data.
 		</div>
